--- a/adopta.html
+++ b/adopta.html
@@ -19,13 +19,13 @@
       <div class="navBar">
         <div class="buttons">
           <a href="Index.html">
-            <img src="img_buttons/button_dach_aro.png" alt="Button dach aro" />
+            <img src="./img_buttons/button_dach_aro.png" alt="Button dach aro" />
             </a>
           <label for=""> Sobre Nosotros </label>
         </div>
         <div class="buttons">
           <a href="Historia.html"><img
-            src="img_buttons/button_dach_brown.png"
+            src="./img_buttons/button_dach_brown.png"
             alt="Button dach Brown"
           /></a>
           <label for=""> Historia del Dachshund </label>
@@ -33,20 +33,20 @@
         <div class="buttons">
           <a href="caracteristicas.html">
           <img
-            src="img_buttons/button_dach_butter.png"
+            src="./img_buttons/button_dach_butter.png"
             alt="Button dach butter"
           /></a>
           <label for=""> Características del Dachshund </label>
         </div>
         <div class="buttons">
           <a href="blog.html">
-          <img src="img_buttons/button_dach_lady.png" alt="Button dach lady" /> </a>
+          <img src="./img_buttons/button_dach_lady.png" alt="Button dach lady" /> </a>
           <label for=""> Blog </label>
         </div>
         <div class="buttons">
           <a href="adopta.html">
           <img
-            src="img_buttons/button_dach_marmol.png"
+            src="./img_buttons/button_dach_marmol.png"
             alt="Button dach marmol"
           /></a>
           <label for=""> Adópta un Dachshund </label>
@@ -54,7 +54,7 @@
         <div class="buttons">
           <a href="contact.html">
           <img
-            src="img_buttons/button_dach_tonge.png"
+            src="./img_buttons/button_dach_tonge.png"
             alt="Button dach tonge"
           /></a>
           <label for=""> Contactanos </label>
@@ -92,15 +92,15 @@
         <h2>
           Contactanos en 
         </h2>
-        <img src="img_footer/fb.png" alt="fb logo">
+        <img src="./img_footer/fb.png" alt="fb logo">
         <h2> 
           Facebook
         </h2>
-        <img src="img_footer/ig.png" alt="ig logo">
+        <img src="./img_footer/ig.png" alt="ig logo">
         <h2>
           Instagram
         </h2>
-        <img src="img_footer/lin.png" alt="lin logo">
+        <img src="./img_footer/lin.png" alt="lin logo">
         <h2>
           Linkedin
         </h2>
