--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.CSS" />
+    <link rel="interactivesheet" href="interactive.js" />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
@@ -76,15 +77,15 @@
         <h2>
           Contactanos en 
         </h2>
-        <img src="img_footer/fb.png" alt="fb logo">
+        <img src="./img_footer/fb.png" alt="fb logo">
         <h2> 
           Facebook
         </h2>
-        <img src="img_footer/ig.png" alt="ig logo">
+        <img src="./img_footer/ig.png" alt="ig logo">
         <h2>
           Instagram
         </h2>
-        <img src="img_footer/lin.png" alt="lin logo">
+        <img src="./img_footer/lin.png" alt="lin logo">
         <h2>
           Linkedin
         </h2>
