--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.CSS" />
+    
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
@@ -125,25 +126,24 @@
 
       </div>
           
-
-    <footer>
-      <div class="foot">
-        <h2>
-          Contactanos en 
-        </h2>
-        <img src="img_footer/fb.png" alt="fb logo">
-        <h2> 
-          Facebook
-        </h2>
-        <img src="img_footer/ig.png" alt="ig logo">
-        <h2>
-          Instagram
-        </h2>
-        <img src="img_footer/lin.png" alt="lin logo">
-        <h2>
-          Linkedin
-        </h2>
-      </div>
-        </footer>
+      <footer>
+        <div class="foot">
+          <h2>
+            Contactanos en 
+          </h2>
+          <img src="./img_footer/fb.png" alt="fb logo">
+          <h2> 
+            Facebook
+          </h2>
+          <img src="./img_footer/ig.png" alt="ig logo">
+          <h2>
+            Instagram
+          </h2>
+          <img src="./img_footer/lin.png" alt="lin logo">
+          <h2>
+            Linkedin
+          </h2>
+        </div>
+          </footer>
   </body>
 </html>
