Correcting picture name

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="family">
       <div class="familyCard1 cards">
         <img
-            src= "img_family/janice_becker.png"
+            src= "./img_family/Janice_Becker.png"
             alt="janice_becker"
           />
           <label for=""> Veterinaria </label>
