Correcting some issues

--- a/blog.html
+++ b/blog.html
@@ -20,14 +20,14 @@
 
       <div class="navBar">
         <div class="buttons">
-          <a href="Index.html">
-            <img src="img_buttons/button_dach_aro.png" alt="Button dach aro" />
+          <a href="index.html">
+            <img src="./img_buttons/button_dach_aro.png" alt="Button dach aro" />
             </a>
           <label for=""> Sobre Nosotros </label>
         </div>
         <div class="buttons">
-          <a href="Historia.html"><img
-            src="img_buttons/button_dach_brown.png"
+          <a href="historia.html"><img
+            src="./img_buttons/button_dach_brown.png"
             alt="Button dach Brown"
           /></a>
           <label for=""> Historia del Dachshund </label>
@@ -35,20 +35,20 @@
         <div class="buttons">
           <a href="caracteristicas.html">
           <img
-            src="img_buttons/button_dach_butter.png"
+            src="./img_buttons/button_dach_butter.png"
             alt="Button dach butter"
           /></a>
           <label for=""> Características del Dachshund </label>
         </div>
         <div class="buttons">
           <a href="blog.html">
-          <img src="img_buttons/button_dach_lady.png" alt="Button dach lady" /> </a>
+          <img src="./img_buttons/button_dach_lady.png" alt="Button dach lady" /> </a>
           <label for=""> Blog </label>
         </div>
         <div class="buttons">
           <a href="adopta.html">
           <img
-            src="img_buttons/button_dach_marmol.png"
+            src="./img_buttons/button_dach_marmol.png"
             alt="Button dach marmol"
           /></a>
           <label for=""> Adópta un Dachshund </label>
@@ -56,7 +56,7 @@
         <div class="buttons">
           <a href="contact.html">
           <img
-            src="img_buttons/button_dach_tonge.png"
+            src="./img_buttons/button_dach_tonge.png"
             alt="Button dach tonge"
           /></a>
           <label for=""> Contactanos </label>
