--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
       <div class="navBar">
         <div class="buttons">
-          <a href="Index.html">
+          <a href="index.html">
             <img src="img_buttons/button_dach_aro.png" alt="Button dach aro" />
             </a>
           <label for=""> Sobre Nosotros </label>
         </div>
         <div class="buttons">
-          <a href="Historia.html"><img
+          <a href="historia.html"><img
             src="img_buttons/button_dach_brown.png"
             alt="Button dach Brown"
           /></a>
@@ -81,7 +81,7 @@
 
       <div class="familyCard2 cards">
         <img
-            src= "img_family/Debora_Sarkis.png"
+            src= "./img_family/Debora_Sarkis.png"
             alt="Debora_Sarkis"
           />
           <label for=""> Veterinaria </label>
