--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
 
       <article class="articleNum1">
         <h2 a id="LosTiposDeDachshund">Los tipos de Dachshund</h2>
-        <img class="imgBlogNum1" src="img_buttons/button_dach_aro.png" alt="Tipos de Dachshund"> 
+        <img class="imgBlogNum1" src="./img_buttons/button_dach_aro.png" alt="Tipos de Dachshund"> 
         <div>
         <p>Hay tres variedades, según la circunferencia torácica medida a la edad de 15 meses:</p>
         <ul>
@@ -111,7 +111,7 @@
 
  <article class="articleNum1">
   <h2 a id="LaSaludDelDacshund">La salud del Dachshund</h2>
-  <img class="imgBlogNum1" src="/img_buttons/button_dach_marmol.png" alt="Salud del dachshund"> 
+  <img class="imgBlogNum1" src="./img_buttons/button_dach_marmol.png" alt="Salud del dachshund"> 
   <div>
   <p>La raza es conocida por sus problemas de espina dorsal, debido a su columna vertebral extremadamente larga y a sus costillas cortas. El riesgo de lesiones puede empeorar en caso de sobrepeso. Para prevenir daños, es recomendable que estos perros no salten ni suban y bajen escaleras. Cada vez es más evidente que estos problemas son hereditarios, y los criadores trabajan en la mejora de la raza.</p>
   <p>Sin embargo, es sabido que estos perros, con una correcta educación deportiva, no presentarían problemas en este ámbito. En especial si son animales que gozan de grandes espacios donde pueden correr y saltar libremente. Son perros muy ágiles de reflejos excepcionales que, sin embargo, por sus patas cortas no alcanzan altas velocidades. En general son canes que no son propensos a enfermedades siempre y cuando el dueño tenga un buen cuidado al momento de una enfermedad, tanto como, llevarlo al veterinario, como siguiendo sus instrucciones.</p>
@@ -123,7 +123,7 @@
 
 <article class="articleNum1">
   <h2 a id="LaEducacionDelDachshund">La educación del Dachshund</h2>
-  <img class="imgBlogNum1" src="/img_buttons/button_dach_tonge.png" alt="La educación del Dachshund"> 
+  <img class="imgBlogNum1" src="./img_buttons/button_dach_tonge.png" alt="La educación del Dachshund"> 
   <div>
   <p>Se exagera mucho al afirmar que el dachshund es testarudo y no se deja educar. Sin embargo, puede existir alguna razón para juzgarlo así, tal vez su pequeño tamaño lleva a cuidarlo más de lo debido y a transigir con sus caprichos, los mismos que tienen la mayoría de cachorros, lo que luego en el lenguaje popular se traduce en las proverbiales "cabezonerías" del dachshund, que se dan en casi todos los cachorros. Aparte de ello, la educación de un dachshund no es más difícil que la de cualquier perro, al contrario. El dachshund es un perro muy inteligente, que aprende muy rápido, y de cachorro, igual de cabezón que otras razas. Una vez que comprenden las reglas de convivencia y se les educa adecuadamente son perros cariñosos, protectores y a la par que muy juguetones, incluso llegando a colaborar en las tareas del hogar.</p>
   <p>El dachshund, de buenas líneas de trabajo, no es un sabueso en el estricto sentido del término, pero como le viene de este su excelente olfato, puede hacer el trabajo de un sabueso a su manera y de acuerdo con su pequeño tamaño. No es un terrier propiamente dicho, pero trabaja a la perfección bajo tierra en la madriguera, como lo haría un terrier, tampoco es un braco propiamente dicho, pero puede hacer el trabajo de este, de acuerdo con su tamaño.</p>
@@ -134,7 +134,7 @@
 
 <article class="articleNum1">
   <h2 a id="FamiliaSason">Testimonio: Familia Sason</h2>
-  <img class="imgBlogNum1" src="img_buttons/button_dach_brown.png" alt="Cookie"> 
+  <img class="imgBlogNum1" src="./img_buttons/button_dach_brown.png" alt="Cookie"> 
   <div>
   <p>Adoptar a Cookie fue lo mejor que nos podía pasar. Tenemos tres hijos, Mery, Troy y Densel. El año pasado Troy de 6 años comenzó el colegio y Densel se quedaba en la casa toda la tarde sin tener con quién jugar. Sabíamos de su amor por los animales, pero también el trabajo que requiere una mascota. No podíamos imaginar la vida con un hijo más. Todos los días pasábamos cerca de la granja del Dachshund y Densel señalaba a los salchichas por la ventana.</p>
   <p>Una tarde solo para entretener a Densel fuimos a visitar la granja. Nos permitieron pasar y cuando nos distrajimos charlando con Daisy, Densel ya tenia un cachorro a upa que le besaba toda la cara….sin pensarlo ya estábamos iniciando las entrevistas. </p>
@@ -145,7 +145,7 @@
 
 <article class="articleNum1">
   <h2 a id="FamiliaFucks">Testimonio: Familia Fucks</h2>
-  <img class="imgBlogNum1" src="/img_buttons/button_dach_lady.png" alt="Lulu"> 
+  <img class="imgBlogNum1" src="./img_buttons/button_dach_lady.png" alt="Lulu"> 
   <div>
   <p>Mi nombre es Dina Fucks y estoy super enamorada de mi salchichita Clementina. Hace tiempo buscaba una compañera de vida y siempre me gustaron mucho los perros. El problema era que vivía en un departamento no muy espacioso y solo podía adoptar un cachorro que no fuera a crecer demasiado. Comencé a investigar sobre razas de perros y así encontré a los petisos Dachshunds. Juguetones, mimosos, divertidos y chiquitos. Lo que no sabía al principio era donde podía adoptar uno. Todos mis amigos y familiares tenían perros enormes y también sus crías. </p>
   <p>Finalmente encontré a la granja Daschund en una publicación de Facebook…parecía ideal para adoptar un perrito pero me quedaba muy lejos! Comencé a tener entrevistas con Daisy por zoom y en una de esas me presentó a Lulu. Enseguida me conquistó! Les envié videos de mi departamento para que conocieran cual sería su nuevo hogar y sólo me dieron dos condiciones: Instalar una red protectora en mi balcón y viajar hasta la granja….Por suerte mi hermano se ofreció a llevarme en su auto…fueron las 4 horas más largas de mi vida, estaba super impaciente, pero la vuelta con mi Lulu a upa fue hermoso!</p>
